# ottimizzatore_lauree

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
bruno_api_tests/: bruno.json
bruno_api_tests/Sessions/: Get Graduation Sessions.bru  Get Specific Session.bru  Upload new Session data.bru  folder.bru
bruno_api_tests/Sessions/Professor Availabilities/: Get Professors Availabilities for a Session.bru  Update Professor Availability.bru  folder.bru
bruno_api_tests/Sessions/Session Entry-Students/: Get Students for a session.bru  folder.bru
server/: .env  alembic.ini  server.py  session_maker.py
server/migrations/: env.py
server/migrations/versions/: 6567b8492c58_first_database_version.py  a55ee52d742e_professors_time_availability.py  e67bf411b46e_professors_split.py
server/model/: __init__.py  commission.py  commission_entry.py  enums.py  hashable.py  model.py  optimization_configuration.py  professor.py  solution_commission.py  string_enum.py  student.py
server/optimization/: models.py  solution.py
server/utils/: __init__.py  file_change_handler.py  logging.py
server/v2/: asgi.py  config.yaml
server/v2/config/: app.py  db.py  log_settings.py  schema.json  server.py  settings.py
web/: .env  .gitignore  components.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts
web/src/: app.css  app.html
web/src/lib/: DropdownButton.svelte  NewCommissionDialog.svelte  Poller.ts  store.ts  utils.ts
web2/: package-lock.json  package.json  svelte.config.js  vite.config.ts
web2/src/: app.d.ts
(+70 files in other folders)
