[project]
name = "ottimizzatore-lauree"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "advanced-alchemy>=1.4.3",
    "alembic>=1.15.2",
    "flask>=3.1.1",
    "flask-cors>=5.0.1",
    "litestar[standard]>=2.16.0",
    "msgspec>=0.19.0",
    "numpy>=2.2.6",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "psycopg[binary]>=3.2.9",
    "pyarrow>=19.0.1",
    "pydantic>=2.11.4",
    "pyomo>=6.9.1",
    "python-dotenv>=1.1.0",
    "python-multipart>=0.0.20",
    "sqlalchemy>=2.0.41",
    "structlog>=25.3.0",
    "watchdog>=6.0.0",
    "xlrd>=2.0.1",
]
